<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <EditText
        android:id="@+id/register_phone_et"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/regiser_phone"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/send_btn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@id/register_phone_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/send" />

    <EditText
        android:id="@+id/phone_verify_code_tv"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_below="@id/send_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/regiser_code_hint"
        android:textSize="20dp" />


    <TextView
        android:id="@+id/register_next"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:text="@string/next"
        android:textSize="25dp" />

</RelativeLayout>