<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/username_tv"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_above="@id/password_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:hint="@string/username_hint"
        android:paddingLeft="10dp" />

    <EditText

        android:id="@+id/password_tv"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:gravity="center_vertical"
        android:hint="@string/password_hint"
        android:paddingLeft="10dp" />


    <TextView
        android:id="@+id/login_tv"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/password_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="#1111"
        android:gravity="center"
        android:text="@string/login"
        android:clickable="true"
        android:textColor="#000000"
        android:focusable="true" />

    <TextView
        android:id="@+id/register_tv"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/login_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="#1111"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="#000000" />


</RelativeLayout>